<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- app -->
    <string name="app_name">智能社区</string>
    <string name="app_run_code_error">哎呀，我好像出错了</string>
    <string name="app_loading">努力加载中&#8230;</string>
    <string name="app_comminting">正在提交&#8230;</string>
    <string name="app_exit_tips">再按一次退出</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_vertical_line">|</string>
    <string name="app_socket_timeout">您的网络好像不给力哦</string>
    <string name="app_handle_fail">操作失败，请重试</string>
    <string name="app_setting">设置</string>
    <string name="app_ok_en">OK</string>
    <string name="app_complete">完成</string>

    <!-- appUpdate -->
    <string name="version_new_tips">%1$s版本发布啦</string>
    <string name="version_new_tips_byNotify">小白商旅有新版本了，快来更新吧</string>
    <string name="version_loading">正在检查版本更新&#8230;</string>
    <string name="version_isNew">当前已是最新版本</string>
    <string name="version_new_update">有更新</string>
    <string name="update_laster">稍后再说</string>
    <string name="update_now">立即更新</string>
    <string name="update_continue">继续更新</string>
    <string name="download_inBackground">后台下载</string>
    <string name="download_fail_network">您的网络好像不给力哦</string>
    <string name="download_wifi_tip">建议使用Wifi网络下载</string>
    <string name="download_complete_install">下载成功，开始安装</string>
    <string name="download_complete_onclick">下载成功，点击安装</string>
    <string name="download_complete_byNotify">下载完成，请点击通知栏安装</string>
    <string name="downloading_inBackground">后台下载中</string>
    <string name="downloading_version">正在下载新版本</string>
    <string name="downloading_tip">正在下载</string>
    <string name="downloading_progress">0.00MB/0.00MB</string>

    <!-- calendar -->
    <string name="calendar_year">年</string>
    <string name="calendar_month">月</string>
    <string name="calendar_today">今天</string>
    <string name="calendar_choice_date">选择日期</string>

    <!-- app tips -->
    <string name="app_warm_tip">温馨提示</string>
    <string name="app_verify_code_null">验证码不能为空</string>
    <string name="app_login_timeout_re">登录超时，请重新登录</string>
    <string name="app_no_data_tips">暂无记录</string>

    <!-- pull down -->
    <string name="pull_is_loading">正在加载&#8230;</string>
    <string name="pull_refresh_down_text">下拉可刷新</string>
    <string name="pull_refresh_release_text">松开可刷新</string>
    <string name="pull_load_release_text">松开可加载</string>
    <string name="pull_last_update_time">最后更新时间 : </string>
    <string name="pull_down_to_refresh">下拉刷新</string>
    <string name="pull_up_to_load">上拉加载</string>
    <string name="pull_no_more_msg">已经到底啦</string>
    <string name="pull_fail_msg">加载失败</string>
    <string name="pull_refresh_fail">刷新未成功，请稍后重试</string>

    <!-- index -->
    <string name="index_home">首页</string>
    <string name="index_property">物业</string>
    <string name="index_business">商圈</string>
    <string name="index_community">圈子</string>
    <string name="index_my">我的</string>

    <!-- feedback -->
    <string name="feedback_hint">请留下您的宝贵建议&#8230;&#8230;&#8230;</string>
    <string name="feedback_send">发送</string>
    <string name="feedback_input_limit">剩余&#160;%1$s字</string>
    <string name="feedback_content_null">您还没有填写反馈哦</string>

    <!-- message -->
    <string name="message_no">暂无消息记录</string>

    <!-- photo -->
    <string name="photo_select">选择照片</string>
    <string name="photo_album_ar">最近照片</string>
    <string name="photo_preview">预览</string>
    <string name="photo_limit_tips">最多选择%s张图片</string>
    <string name="photo_preview_count_format">预览(%s)</string>

    <!-- numberpicker -->
    <string name="np_number_picker_increment_scroll_mode"><xliff:g id="value" example="3">%s</xliff:g> tap and hold.</string>
    <string name="np_number_picker_increment_scroll_action">Slide up to increment and down to decrement.</string>
    <string name="np_number_picker_increment_button">Increment</string>
    <string name="np_number_picker_decrement_button">Decrement</string>

    <!-- update -->
    <string name="error_version_getNew_fail">获取版本更新失败了，请重试</string>
    <string name="error_download_install_fail">安装失败，请重试</string>
    <string name="error_download_fail">下载失败，请重试</string>

</resources>